# Efficient-Visualization-of-Large-Directed-Acyclic-Graphs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  init.js  makefile  package-lock.json  pyproject.toml  requirements.txt
app/: analyze_graph.py  draw_graph_plotly.py  graph_utils.py  load_ontology.py  main.py
app/backend/: Dockerfile  requirements.txt
app/cpp-backend/: CMakeLists.txt  Dockerfile  check_if_files_compile.sh  compile_project.sh  docker-entrypoint.sh  file_combinations_list.txt  main.cpp  run_project.sh
app/cpp-backend/additional_scripts/: transform_bq_w_lc_to_max_cut.py  util_functions.py
app/cpp-backend/algorithms/: CMakeLists.txt  Graph_Colourer.cpp  Graph_Colourer.h  Layout_Drawer.cpp  Layout_Drawer.h  algorithm_params_creation.cpp  algorithm_params_creation.hpp
app/cpp-backend/build/: CMakeCache.txt
app/cpp-backend/concurrency/: CMakeLists.txt  Thread_Pool.cpp  Thread_Pool.hpp
app/cpp-backend/data-structures/: Array_of_Arrays.cpp  Array_of_Arrays.h  Array_of_Arrays_Interface.cpp  Array_of_Arrays_Interface.h  Array_of_Arrays_View.cpp  Array_of_Arrays_View.h  Bucketified_Line_Segment.cpp  Bucketified_Line_Segment.hpp  CMakeLists.txt  Cartesian_Surface_Grid.cpp  Cartesian_Surface_Grid.h  Coloured_Graph.cpp  Coloured_Graph.h  Graph.cpp  Graph.h  Graph_Interface.cpp  Graph_Interface.h  One_Pair_Field_Array_Wrapper.cpp  One_Pair_Field_Array_Wrapper.hpp  Partially_Disabled_Graph.cpp  Partially_Disabled_Graph.h  Pretend_Matrix.cpp  Pretend_Matrix.hpp  Sparse_Array.cpp  Sparse_Array.h  Sparse_Array.hpp  Sparse_Matrix.cpp  Sparse_Matrix.h
app/cpp-backend/graph-preprocessing/: CMakeLists.txt  assign_levels.cpp  assign_levels.h  edge_and_vertex_processing_functions.cpp  edge_and_vertex_processing_functions.h  edge_processing_functions.cpp  edge_processing_functions.h
app/cpp-backend/logging/: CMakeLists.txt  boost_logging.cpp  boost_logging.hpp
app/cpp-backend/net/: CMakeLists.txt  Grpc_Layout_Service.cpp  Grpc_Layout_Service.hpp  Layout_Service.cpp  Layout_Service.hpp  serialized_message_processing.cpp  serialized_message_processing.hpp
app/cpp-backend/net/net-compiled/proto/: cpp_to_py_backend.grpc.pb.cc  cpp_to_py_backend.grpc.pb.h  cpp_to_py_backend.pb.cc  cpp_to_py_backend.pb.h
app/cpp-backend/net/net_compiled_from_proto/: CMakeLists.txt  py_to_cpp_backend.grpc.pb.cc  py_to_cpp_backend.grpc.pb.h  py_to_cpp_backend.pb.cc  py_to_cpp_backend.pb.h
app/cpp-backend/net/proto/: py_to_cpp_backend.proto
app/cpp-backend/proto/: cpp_to_py_backend.proto
app/cpp-backend/py_qap_solving_scripts/: biq_bin_qap_solver.py  colour_hierarchy_node.py  example_qap.txt  example_qap_max_cut_transformation.txt_0_new  example_qap_max_cut_transformation.txt_0_start_info.output  example_qap_max_cut_transformation.txt_0_temporary_solution_1.output  example_qap_max_cut_transformation.txt_0_temporary_solution_2.output  example_qap_max_cut_transformation.txt_0_temporary_solution_3.output  example_qap_max_cut_transformation.txt_0_temporary_solution_4.output  pretend_matrix.py  primitive_try_qap_solve.py  primitive_try_qap_solve_test.py  qap_solver.py  stack.py
app/cpp-backend/py_qap_solving_scripts/python_logs/: log_temp.txt
app/cpp-backend/qap-solver/: cpp_to_py_backend_pb2.py  cpp_to_py_backend_pb2_grpc.py  server.py
app/cpp-backend/src_code_back_ups/: Array_of_Arrays.h  Graph_Colourer.cpp  Graph_Colourer.h  Sparse_Array.h  Sparse_Matrix.h  input_generation_for_qap.cpp  main.cpp
app/cpp-backend/utils/: CMakeLists.txt  Counting_Allocator.cpp  Counting_Allocator.h  arithmetic_ops_for_pair_overloads.cpp  arithmetic_ops_for_pair_overloads.h  arithmetic_ops_for_pair_overloads.hpp  input_generation_for_qap.cpp  input_generation_for_qap.h  traits.cpp  traits.h
app/frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
app/python-backend/: .dockerignore  Dockerfile  requirements.txt
docker/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: circularDAG.ts  data-gen.ts  main.ts  style.css
research_scipts/: benchmark_go_basic.py  benchmark_synthetic.py  fit_and_plot_from_csv.py  path_count.py
research_scripts/: path_count.py
tests/: test_clustering.py
(+202 files in other folders)
